--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,19 @@ server:
   port: 8090
 
 security:
+  basic:
+    enabled: false
   oauth2:
     resource:
+      userInfoUri: http://keycloak.k8.wildwidewest.xyz/auth/realms/meltingpoc/protocol/openid-connect/userinfo
       token-info-uri: http://keycloak.k8.wildwidewest.xyz/auth/realms/meltingpoc/protocol/openid-connect/token/introspect
+      prefer-token-info: false
     client:
       clientId: meltingpoc
-      clientSecret: 4a5bac8a-87e2-4ce1-a417-75f9f70bebef
       accessTokenUri: http://keycloak.k8.wildwidewest.xyz/auth/realms/meltingpoc/protocol/openid-connect/token
       userAuthorizationUri: http://keycloak.k8.wildwidewest.xyz/auth/realms/meltingpoc/protocol/openid-connect/auth
+      scope: openid
+      registered-redirect-uri: http://localhost:8090
+      pre-established-redirect-uri: http://localhost:8090
+
+
